Remove title from images

--- a/code/index.html
+++ b/code/index.html
@@ -26,31 +26,21 @@
       <!-- Some kind of logo and navbar -->
       <nav class="navbar">
         <a href="#"
-          ><img
-            src="../img/a_cat.jpg"
-            alt="logo"
-            title="Logo, black cat"
-            class="logo-nav"
+          ><img src="../img/a_cat.jpg" alt="Logo: A cat" class="logo-nav"
         /></a>
         <div>
           <ul class="navbar-ul">
             <li>
-              <a
-                class="active home-nav"
-                aria-current="page"
-                href="#"
-                title="Home"
-                >Home</a
-              >
+              <a class="active home-nav" aria-current="page" href="#">Home</a>
             </li>
             <li>
-              <a href="./tips.html" title="Tips">Tips</a>
+              <a href="./tips.html">Tips</a>
             </li>
             <li>
-              <a href="quotes.html" title="Quotes & Memes">Quotes & Memes</a>
+              <a href="quotes.html">Quotes & Memes</a>
             </li>
             <li>
-              <a href="contact.html#contact" title="Contact">Contact</a>
+              <a href="contact.html#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -116,14 +106,12 @@
                 <img
                   src="../img/illustratedYogaCat.jpg"
                   class="img-big-news-one"
-                  alt="A cat sitting in the lotus position"
-                  title="Cat Yoga Lotus Position"
+                  alt="An illustration of a cat sitting in the yoga lotus position"
                 />
                 <figcaption>
                   <em>Illustration: Touch the Peacock</em>
                   <a
                     href="https://www.instagram.com/touchthepeacock/"
-                    title="Instagram Profile"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><i class="fa-brands fa-instagram" aria-hidden="true"></i
@@ -139,7 +127,6 @@
                 src="../img/sunSalutatingCat.jpg"
                 class="img-big-news-two"
                 alt="A cat doing yoga indoors"
-                title="Cat Yoga Indoors"
               />
               <figcaption>
                 <em>Photo: Smirre Archives</em>
@@ -186,7 +173,6 @@
                         src="../img/outoodoorYogaCat.jpg"
                         class="img-other-news-one"
                         alt="A cat doing yoga outdoors"
-                        title="Outdoor Yoga Cat"
                       />
                     </div>
                   </div>
@@ -217,7 +203,6 @@
                       src="../img/climbingCat.jpg"
                       class="img-other-news-two"
                       alt="A cat climbing"
-                      title="Climbing Cat"
                     />
                   </div>
                 </div>
@@ -243,7 +228,6 @@
                       src="../img/walkingCat.jpeg"
                       class="img-other-news-three"
                       alt="A cat walking"
-                      title="Walking Cat"
                     />
                   </div>
                 </div>
@@ -266,7 +250,6 @@
                       src="../img/crunchingCat.jpg"
                       class="img-other-news-four"
                       alt="A cat doing crunches"
-                      title="Crunching Cat"
                     />
                   </div>
                 </div>
@@ -279,18 +262,13 @@
     <footer>
       <div class="footer">
         <div class="logo-footer">
-          <img
-            src="../img/a_cat.jpg"
-            alt="Logo, black cat"
-            title="Logo, black cat"
-          />
+          <img src="../img/a_cat.jpg" alt="Logo, black cat" />
           <span class="logoTextSpan">Michelle Wegler 2023</span>
         </div>
         <div class="flex-parent">
           <div class="flex-child">
             <a
               href="https://www.linkedin.com/in/michellewegler/"
-              title="Linkedin Profile"
               target="_blank"
               rel="noopener noreferrer"
               ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
@@ -300,7 +278,6 @@
           <div class="flex-child">
             <a
               href="https://github.com/smirrebinx/Responsive-Portfolio.git"
-              title="Github Profile"
               target="_blank"
               rel="noopener noreferrer"
               ><i class="fab fa-github" aria-hidden="true"></i
