Fix display block on figcapture

--- a/code/index.html
+++ b/code/index.html
@@ -109,7 +109,7 @@
                   alt="An illustration of a cat sitting in the yoga lotus position"
                 />
                 <figcaption>
-                  <em>Illustration: Touch the Peacock</em>
+                  <em>Illustration:</em><em> Touch the Peacock</em>
                   <a
                     href="https://www.instagram.com/touchthepeacock/"
                     target="_blank"
@@ -128,9 +128,7 @@
                 class="img-big-news-two"
                 alt="A cat doing yoga indoors"
               />
-              <figcaption>
-                <em>Photo: Smirre Archives</em>
-              </figcaption>
+              <figcaption><em>Photo:</em><em>Smirre Archives</em></figcaption>
             </figure>
           </div>
         </div>
