--- a/code/index.html
+++ b/code/index.html
@@ -142,6 +142,32 @@
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
+              <h4>Bouldering</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review">
+                        <q>Wow, bouldering was so much fun, and scary!</q>
+                      </p>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                    </div>
+                    <img
+                      src="../img/climbingCat.jpg"
+                      class="img-other-news-two"
+                      alt="A cat climbing"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
               <h4>Outdoor Yoga</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
@@ -173,35 +199,6 @@
                         alt="A cat doing yoga outdoors"
                       />
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h4>Bouldering</h4>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <p class="review">
-                        <q
-                          >Wow, bouldering was so much fun, and scary at the
-                          same time!</q
-                        >
-                      </p>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                    </div>
-                    <img
-                      src="../img/climbingCat.jpg"
-                      class="img-other-news-two"
-                      alt="A cat climbing"
-                    />
                   </div>
                 </div>
               </div>
@@ -258,30 +255,28 @@
       </section>
     </div>
     <footer>
-      <div class="footer">
-        <div class="logo-footer">
-          <img src="../img/a_cat.jpg" alt="Logo, black cat" />
-          <span class="logoTextSpan">Michelle Wegler 2023</span>
+      <div class="logo-footer">
+        <img src="../img/a_cat.jpg" alt="Logo, black cat" />
+        <span class="logoTextSpan">Michelle Wegler 2023</span>
+      </div>
+      <div class="flex-parent">
+        <div class="flex-child">
+          <a
+            href="https://www.linkedin.com/in/michellewegler/"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+            ><span class="sr-only">Linkedin</span></a
+          >
         </div>
-        <div class="flex-parent">
-          <div class="flex-child">
-            <a
-              href="https://www.linkedin.com/in/michellewegler/"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
-              ><span class="sr-only">Linkedin</span></a
-            >
-          </div>
-          <div class="flex-child">
-            <a
-              href="https://github.com/smirrebinx/Responsive-Portfolio.git"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="fab fa-github" aria-hidden="true"></i
-              ><span class="sr-only">Github</span></a
-            >
-          </div>
+        <div class="flex-child">
+          <a
+            href="https://github.com/smirrebinx/Responsive-Portfolio.git"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github" aria-hidden="true"></i
+            ><span class="sr-only">Github</span></a
+          >
         </div>
       </div>
     </footer>
