Add border to grid other news

--- a/code/index.html
+++ b/code/index.html
@@ -156,11 +156,16 @@
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                     </div>
-                    <img
-                      src="../img/climbingCat.jpg"
-                      class="img-other-news-two"
-                      alt="A cat climbing"
-                    />
+                    <figure>
+                      <img
+                        src="../img/climbingCat.jpg"
+                        class="img-other-news-two"
+                        alt="A cat climbing"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
                   </div>
                 </div>
               </div>
@@ -193,11 +198,16 @@
                           >pets</i
                         >
                       </div>
-                      <img
-                        src="../img/outoodoorYogaCat.jpg"
-                        class="img-other-news-one"
-                        alt="A cat doing yoga outdoors"
-                      />
+                      <figure>
+                        <img
+                          src="../img/outoodoorYogaCat.jpg"
+                          class="img-other-news-one"
+                          alt="A cat doing yoga outdoors"
+                        />
+                        <figcaption class="figcaption-other-news">
+                          <em>Photo:</em><em>Smirre Archives</em>
+                        </figcaption>
+                      </figure>
                     </div>
                   </div>
                 </div>
@@ -219,11 +229,16 @@
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                     </div>
-                    <img
-                      src="../img/walkingCat.jpeg"
-                      class="img-other-news-three"
-                      alt="A cat walking"
-                    />
+                    <figure>
+                      <img
+                        src="../img/walkingCat.jpeg"
+                        class="img-other-news-three"
+                        alt="A cat walking"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
                   </div>
                 </div>
               </div>
@@ -241,11 +256,16 @@
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                     </div>
-                    <img
-                      src="../img/crunchingCat.jpg"
-                      class="img-other-news-four"
-                      alt="A cat doing crunches"
-                    />
+                    <figure>
+                      <img
+                        src="../img/crunchingCat.jpg"
+                        class="img-other-news-four"
+                        alt="A cat doing crunches"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
                   </div>
                 </div>
               </div>
