--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
@@ -9,18 +8,17 @@
   <body> 
 <!-- Here comes the logo followed by the nav -->
      <div> 
-      <header>
-        <img src="/pictures/alabamalogo.jpg" class="logo" style="float: left; margin: 17px 80px 11px 0px;" alt="Alabama Pine Journal logo">
-        <img src="/pictures/pinetimessmall.jpg" class="logosmall" style="float: left; margin: 17px 80px 11px 7px;" alt="Alabama Pine Journal small-logo">
+      <header id="header">
+        <img src="./pictures/alabamalogo.jpg" class="logo" style="float: left; margin: 17px 80px 11px 0px;" alt="Alabama Pine Journal logo">
+        <img src="./pictures/pinetimessmall.jpg" class="logosmall" style="float: left; margin: 21px 0px 11px 7px;" alt="Alabama Pine Journal small-logo">
           <br>        
             <nav class="navbar">
             <a href="http://www.google.com">ARCHIVE</a>
             <a href="http://www.google.com">SEARCH</a>
             <a href="mailto:pererikandreas@gmail.com">CONTACT</a>
             </nav>
-            <div class="widget-top">
-             <hr><br>
 <!-- Here´s a Weather widget -->    
+            <div class="widget-top"><br>
              <div id="ww_62cfd9753fdfb" v='1.3' loc='id' a='{"t":"ticker","lang":"en","sl_lpl":1,"ids":["wl1558"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#fbcc33","cl_font":"#000000","cl_cloud":"#000000","cl_persp":"#000000","cl_sun":"#000000","cl_moon":"#000000","cl_thund":"#000000"}'>Weather Data Source: <a href="https://sharpweather.com/weather_alabama/" id="ww_62cfd9753fdfb_u" target="_blank">Alabama weather forecast</a>
             </div><script async src="https://app1.weatherwidget.org/js/?id=ww_62cfd9753fdfb"></script><br>
             <br style="clear: both;" />
@@ -30,7 +28,7 @@
      <div>
       <section class="grid-parent">
         <div class="grid-item big-news-grid">
-          <img class="bignewspicture" src="/pictures/greenpines.jpeg" alt="Green pines from above" title="green-pines">
+          <img class="bignewspicture" src="./pictures/greenpines.jpeg" alt="Green pines from above" title="green-pines">
             <div class="bignewstext">
               <article>
                 <h1><a href="https://en.wikipedia.org/wiki/Sierra_Madre_Occidental">This is a beautiful tree!</a></h1>
@@ -41,35 +39,35 @@
          </div>
      </div> 
 <!-- Here´s more news(cards)  -->
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/trafficlights.jpg" alt="Trafficlights in the night">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/trafficlights.jpg" alt="Trafficlights in the night">
           <h2><a href="https://www.shmoop.com/drivers-ed/alabama/traffic-lights-and-signals.html">Accedents due to broken traffic-lights along E75.</a></h2>
           <p class="morenewstext">Traffic lights around the Alabama area and especially the E75 is a hazzard...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/logs.jpeg" alt="Staked logs">
-          <h2><a href="https://en.wikipedia.org/wiki/Log_Lady">Logladyacademy, heres the 2023 nominations.</a></h2>
-          <p class="morenewstext">The classic Alabama event is back: "After the pandemic its time to hand out prizes" the jury says...<br></p>
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/logs.jpeg" alt="Staked logs">
+          <h2><a href="https://en.wikipedia.org/wiki/Log_Lady">Loglady-<br>academy, 2023 nominations.</a></h2>
+          <p class="morenewstext">Classic Alabama event is back: "After covid...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/fogpines.jpeg" alt="Fog in the woods">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/fogpines.jpeg" alt="Fog in the woods">
           <h2><a href="https://www.caryinstitute.org/news-insights/media-coverage/fog-connects-ecosystems">Scientists: Fog = Woods best friend</a></h2>
           <p class="morenewstext">Scientists agrees; fog or the moisture in the air is what the trees like...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/axe.jpeg" alt="Picture of an axe">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/axe.jpeg" alt="Picture of an axe">
           <h2><a href="https://www.arms-n-armor.com/blogs/news/what-new-with-the-burgundian-pole-axe">Axe-company expands in Alabama</a></h2>
           <p class="morenewstext">Finest steel and the hardest woods is the usp of the Alabama axe company, Woddy&Sones...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/foggywoods.jpeg" alt="Picture of woods and fog">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/foggywoods.jpeg" alt="Picture of woods and fog">
           <h2><a href="https://coveringclimatenow.org/?gclid=Cj0KCQiA_P6dBhD1ARIsAAGI7HAdnXMb-inUioq09SEtQJHgAOoGZK8LIh6A4xbHuhlO7y4YLExKxFcaAk64EALw_wcB">Climatechanges</a></h2>
-          <p class="morenewstext">How does the undeniable climatechange affect the dark wood and fine nature surounding Alabama...<br></p>
+          <p class="morenewstext">How does the undeniable climatechange affect the wood and...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/snowonpines.jpg" alt="Snow on pinetrees">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/snowonpines.jpg" alt="Snow on pinetrees">
           <h2><a href="https://www.britannica.com/place/Alabama-state/Climate">Winters has arrived</a></h2>
-          <p class="morenewstext">The hardware store are bunkering salt and shovels. Winter is here and with that comes snow...<br></p>
+          <p class="morenewstext">The hardware store are bunkering salt and shovels. Winter is here and with that...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/workershand.jpg" alt="Craftsman working">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/workershand.jpg" alt="Craftsman working">
           <h2><a href="https://www.alabamawoodworker.com/">Local designer opens studio</a></h2>
           <p class="morenewstext">From furniture to exclusive artwork and jewleries, the local craftmans and designers...<br></p>
         </div>
-        <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/cameraman.jpg" alt="Cameraman filming">
+        <div class="grid-item more-news-grid"><img class="more-news-picture" src="./pictures/cameraman.jpg" alt="Cameraman filming">
           <h2><a href="https://www.youtube.com/watch?v=k_xKhHwqeW8">Leeland Hay new documentary</a></h2>
           <p class="morenewstext">The rarest among pines has its home i Mexico and ofcourse Alabamas own Leeland Hay is...<br></p>
         </div>
