cleaned up code and responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -12,13 +12,11 @@
 <body>
 
     <!-- Hero section -->
-  <header></header>  
   
   <div class="container-hero"> 
       <img class="logo" src="/project-news-site/code/logo.svg" alt="Technigo logo">
-      <h1>Dog Parent Weekly</h1>
-      
 
+      <h1>Dog Parent Weekly</h1>
       <div class="hamburger"></div>
       <div class="hamburger"></div>
       <div class="hamburger"></div> 
@@ -27,7 +25,7 @@
        <nav>
           <ul class="navbar">
             <li> <a href="#">HOME</a></li>
-            <li> <a href="#">ABOUT US</a></li>
+            <li> <a href="#">CONTACT</a></li>
             <li> <a href="#">CONTACT</a></li>
           </ul>
         </nav>
@@ -37,32 +35,34 @@
 
 <!-- The big news content -->
 <main>
-<div class="main-article-container">
+
   <section class="big-mama-news">
-        <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="big-news-img" alt="">
-        <p class="small-mama-news"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
+        <img src="/project-news-site/assets/unicorndog.jpg" class="big-news-img" alt="">
+        
+        <p class="big-news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
   </section>
 </main>
-  <section class="small-mama-news">
-<div class="small-mama-news"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil maiores est quos? Quia recusandae nulla quaerat similique earum, quisquam amet accusamus doloremque, dolores, corrupti ab deleniti fugit est dolore. Doloribus?</p>
+  <section class="small-mama-news-container">
+<div><img src="/project-news-site/assets/blackboston.jpg" class="small-news-gridkid" alt="">
 </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="small-news-gridkid" alt="">
         </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="small-news-gridkid" alt="">
         </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/dogwithhat.jpg" class="small-news-gridkid" alt="">
         </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/dogfood.jpg" class="small-news-gridkid" alt="">
         </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </div>
-    <div class="small-mama-news"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" class="small-news-gridkid" alt=""> 
+      </div>
+
+    <div class="small-mama-news"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="small-news-gridkid" alt="">
         </div>
-    <div class="small-mama-news grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
+    <div class="small-mama-news grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="small-news-gridkid" alt="">
         </div>
-    <div class="small-mama-news grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
+    <div class="small-mama-news grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="small-news-gridkid" alt="">
         </div>
-    <div class="small-mama-news"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
+    <div class="small-mama-news"> <img src="/project-news-site/assets/winteriscoming.jpg" class="small-news-gridkid" alt="">
      </div>
   </section>
 
