--- a/code/index.html
+++ b/code/index.html
@@ -32,9 +32,9 @@
             <div class="bignewstext">
               <article>
                 <h1><a href="https://en.wikipedia.org/wiki/Sierra_Madre_Occidental">This is a beautiful tree!</a></h1>
-                <p class="bignewstext">The quote commes from Gus Palmer, Head of KFT<br> (Kentucky Free Tree) 
-                when seeing pictures of the<br> newly found micropine near the southern limit of<br> the Sierra Madre 
-                Occidental mountain range in<br> northwestern and western Mexico.</p>
+                <p class="bignewstext">The quote comes from Gus Palmer, Head of KFT (Kentucky Free Tree) 
+                when seeing pictures of the newly found micropine near the southern limit of the Sierra Madre 
+                Occidental mountain range in northwestern and western Mexico.</p>
              </article>
          </div>
      </div> 
