trying out responsive for tablet and desktop again

--- a/code/index.html
+++ b/code/index.html
@@ -98,7 +98,7 @@
     <section class="medium-news">
       <div class="small-box">
          <img src="./img/internet.jpg" alt="internet" class="small-img">
-          <h4>What has internet done for us.</h4>
+          <h4>What has internet done for us?</h4>
           <p class="p-medium"> How does it really feel to watch your grandkids on twitch 
             instead of having them in your house eating your cookies?
           </p>
