--- a/code/index.html
+++ b/code/index.html
@@ -175,9 +175,7 @@
         <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
         <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
-        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-tumblr"></i></a></div>
+        <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></div>
     <nav class="footer-nav-bar">
         <a class="footer-nav-item" href="https://www.google.com" target="_blank">about us</a>
         <a class="footer-nav-item" href="https://www.google.com" target="_blank">contact</a>
