added image folder

--- a/code/index.html
+++ b/code/index.html
@@ -185,7 +185,7 @@
 <div class="flex-child two">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Chaotic street scene"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\riot.jfif">
+    src="C:\Users\josef\Desktop\AlienInvasion\project-news-site\Images\riot.jfif">
     <div class="preview-text">
       <h4>Cities overrun by riots following invasion event</h4>
       <p>article preview article preview article preview article preview article preview
