--- a/code/index.html
+++ b/code/index.html
@@ -197,7 +197,7 @@
 <div class="flex-child one">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Evening view of Mexico City"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\mexico_city2.jpeg">
+    src="C:\Users\josef\Desktop\AlienInvasion\project-news-site\Images\mexico_city2.jpeg">
     <div class="preview-text">
       <h4>Alien species invades Earth</h4>
       <p>article preview article preview article preview article preview article preview
