Altered code - but with errors

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
   <body>
     <div><header class="header">
       <!-- Logo -->
-            <a href="/"><img src="C:\Users\YlvaKarlsson\Documents\technigo-projects\project-news-site\code\logo-breaking-news-png.png" height="50" width="156" /></a>
+            <a href="/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZ3x0VpzrZ0wEA8iMN3ougsJd5yRhz_edzow&usqp=CAU" height="50" width="156" /></a>
             <a href="#" class="logo">About Crossfit</a>
       <!-- Hamburger icon -->
       <input class="side-menu" type="checkbox" id="side-menu"/>
