--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-widht,initial-scale=1" />
+</head>
 
-    <section class="">
-      <!-- The other news  -->
+<body>
+
+  <section class="navbar">
+    <img class="logo" src="logo.svg" alt="logo">
+    <div class="name">
+      <h1>REUSE MAGAZINE!</h1>
+    </div>
+    <div class="nav-link"><a href="menu">REMAKE</a></div>
+    <div class="nav-link"><a href="menu">GUIDES</a></div>
+    <div class="nav-link"><a href="menu">VIDEO</a></div>
+    <div class="nav-link"><a href="menu">CONTACT</a></div>
+  </section>
+
+
+  <section class="big-news">
+    <section class="grid-parent1">
+      <div class="grid-item grid-text-news"><a href="bignews">23 easy remake-tips for 2023! Start the new year with easy
+          and fun diy-project instead of buying new things. Both kind to the earth and your january-budget. </a>
+      </div>
+      <div class="grid-item grid-big-news">
+        <img src="https://images.pexels.com/photos/5642039/pexels-photo-5642039.jpeg?auto=compress&cs=tinysrgb&w=400"
+          alt="blue stencil on a bag" class="big-news-img" />
+      </div>
+
+
     </section>
-  </body>
+  </section>
+
+  <section class="other-news">
+    <div class="grid-item picture-item"><img
+        src="https://images.pexels.com/photos/1646953/pexels-photo-1646953.jpeg?auto=compress&cs=tinysrgb&w=400"
+        alt="pencils in a jar" class="small-news-image" />
+      <a href="article">What colors to use for different projects? We have the list!</a>
+    </div>
+    <div class="grid-item picture-item"><img
+        src="https://images.pexels.com/photos/1866149/pexels-photo-1866149.jpeg?auto=compress&cs=tinysrgb&w=400"
+        alt="sofa" class="small-news-image" />
+      <a href="article2">Easy makeover! From trash to class!</a>
+    </div>
+    <div class="grid-item picture-item"><img
+        src="https://images.pexels.com/photos/8447782/pexels-photo-8447782.jpeg?auto=compress&cs=tinysrgb&w=400"
+        alt="person sawing" class="small-news-image" />
+      <a href="article3">Update your toolbox - The tools you need and when.</a>
+    </div>
+    <div class="grid-item picture-item"><img src="https://images.pexels.com/photos/3965551/pexels-photo-3965551.jpeg"
+        alt="store with clothes" class="small-news-image" /><a href="article4">Every road leads to...a flea market! List
+        of 50 best ones in
+        Sweden</a></div>
+
+
+  </section>
+
+</body>
+
 </html>
