testing freeimage host

--- a/code/index.html
+++ b/code/index.html
@@ -137,7 +137,7 @@
 <div class="flex-child six">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Child waiting among half empty grocery shelves"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\boy.jpeg">
+    src="https://freeimage.host/i/HaNbpVV">
     <div class="preview-text">
       <h4>Supply chains disrupted</h4>
       <p>article preview article preview article preview article preview article preview
