added some more animation

--- a/code/index.html
+++ b/code/index.html
@@ -52,7 +52,7 @@
     <section class="small-news-content">
       <!-- The small news  -->
       <div class="small-news-big-headline">
-          <h3>LATEST STORIES</h3></div>
+        <a href="#latest-stories-button"><h3 id="latest-stories-button" title="Go to Latest Stories">LATEST STORIES</h3></a></div>
       <div class="small-news-item">
         <div class="small-img-box">
           <img class="small-news-img" src="./images/anton-darius-mAmq5brX5_U-unsplash.jpg" alt="leaves">
@@ -170,7 +170,7 @@
 
     <footer>
     <!-- The footer  -->
-    <img class="footer-logo" src="./images/mag-logo-oi.svg" alt="magazine-logo">
+    <div onclick="topFunction()" id="logo-button" title="Go to top"><img class="footer-logo" src="./images/mag-logo-oi.svg" alt="magazine-logo"></div>
     <div class="footer-icons">
         <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
         <a class="footer-nav-item" href="https://www.google.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
