changed name to index

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./finalcss.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/89b5f4f24f.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
