testing relative path

--- a/code/index.html
+++ b/code/index.html
@@ -137,7 +137,7 @@
 <div class="flex-child six">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Child waiting among half empty grocery shelves"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/boy.jpeg">
+    src="/boy.jpeg">
     <div class="preview-text">
       <h4>Supply chains disrupted</h4>
       <p>article preview article preview article preview article preview article preview
