--- a/code/index.html
+++ b/code/index.html
@@ -65,7 +65,7 @@
 <div class="flex-child twelve">
   <a href="link to article" target="_blank">
   <img class="img-height-size" alt="Bright star in red cloud" 
-  src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\alien_world.jpeg">
+  src="/alien_world.jpeg">
 <div class="preview-text">
   <h4>Alien Homeworld located</h4>
   <p>article preview article preview article preview article preview article preview
