just changed a href and tried one more time to get the font to work in safari, did not succed :(

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css"/>
-    <link href="https://fonts.google.com/share?selection.family=Josefin%20Sans:ital,wght@0,200;0,300;0,400;1,200;1,410;1,500;1,600" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
@@ -120,7 +119,7 @@
             </li>
             </a>
           
-            <a href="#" class="mailto">
+            <a href="#">
             <li>
               <img src="./logo/igblk-logo.svg" alt="instagram" class="some-logo">
             </li>
