--- a/code/index.html
+++ b/code/index.html
@@ -50,9 +50,9 @@
         <p class="ad-text">survival gear store</p>
         <div class="desktop-only-wrapper">
           <h5>Go to store</h5>
-        <img class="desktop-only" alt="advertisement" src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\vertical_ad.jpeg">
+        <img class="desktop-only" alt="advertisement" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/vertical_ad.jpeg?raw=true">
         </div>
-        <img class="portable-only" alt="advertisement" src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\horizontal_ad.jpeg">
+        <img class="portable-only" alt="advertisement" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/horizontal_ad.jpeg?raw=true">
     </a>
 </div>
 
@@ -77,7 +77,7 @@
 <div class="flex-child eleven">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Sailboat going out to sea"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\sailboat.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/sailboat.jpeg?raw=true">
     <div class="preview-text">
   <h4>Zero contact with seafarers</h4>
   <p>article preview article preview article preview article preview article preview
