changes to url and folder

--- a/code/index.html
+++ b/code/index.html
@@ -89,7 +89,7 @@
 <div class="flex-child ten">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Couple being interviewed"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\couple_interview.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/couple_interview.jpeg?raw=true">
     <div class="preview-text">
       <h4>Interview: <span class="quote">"We were abducted"</span></h4>
       <p>article preview article preview article preview article preview article preview
@@ -101,7 +101,7 @@
 <div class="flex-child nine">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Circle hovering over rock formation"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\halo.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/halo.jpeg?raw=true">
     <div class="preview-text">
       <h4>Sightings linked to disappearances</h4>
       <p>article preview article preview article preview article preview article preview
@@ -113,7 +113,7 @@
 <div class="flex-child eight">
   <a href="link to article" target="_blank">
   <img class="img-height-size" alt="Protesters gathered outside mosque"
-  src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\blue_mosque.jpeg">
+  src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/blue_mosque.jpeg?raw=true">
   <div class="preview-text">
     <h4>Worldwide demands for political action</h4>
     <p>article preview article preview article preview article preview article preview
@@ -125,7 +125,7 @@
 <div class="flex-child seven">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Computer screen with code"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\code.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/code.jpeg?raw=true">
     <div class="preview-text">
       <h4>Hackers launch counterattack</h4>
       <p>article preview article preview article preview article preview article preview
@@ -137,7 +137,7 @@
 <div class="flex-child six">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Child waiting among half empty grocery shelves"
-    src="/boy.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/boy.jpeg?raw=true">
     <div class="preview-text">
       <h4>Supply chains disrupted</h4>
       <p>article preview article preview article preview article preview article preview
@@ -149,7 +149,7 @@
 <div class="flex-child five">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Volcanic eruption"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\volcano2.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/volcano2.jpeg?raw=true">
     <div class="preview-text">
       <h4>Outlandish global scale volcanic activity</h4>
       <p>article preview article preview article preview article preview article preview
@@ -161,7 +161,7 @@
 <div class="flex-child four">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Smiling person carrying box and plant"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\ready_to_go.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/ready_to_go.jpeg?raw=true">
     <div class="preview-text">
       <h4>Phoenix man: <span class="quote">"I've been waiting"</span></h4>
       <p>article preview article preview article preview article preview article preview
@@ -173,7 +173,7 @@
 <div class="flex-child three">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="French policemen face crowd"
-    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\police_france.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/police_france.jpeg?raw=true">
     <div class="preview-text">
       <h4>Police fight worldwide riots</h4>
       <p>article preview article preview article preview article preview article preview
@@ -197,7 +197,7 @@
 <div class="flex-child one">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Evening view of Mexico City"
-    src="code\mexico_city2.jpeg">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/mexico_city2.jpeg?raw=true">
     <div class="preview-text">
       <h4>Alien species invades Earth</h4>
       <p>article preview article preview article preview article preview article preview
