all image src updated

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <img class="site-logo" src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Icons\AIU_logo.jpg">
+        <img class="site-logo" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/AIU_logo.jpg?raw=true">
         <h1 class="title" id="H1">Alien Invasion Updates</h1>
     </header>
     <section class="top-grid">
@@ -185,7 +185,7 @@
 <div class="flex-child two">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Chaotic street scene"
-    src="https://images.pexels.com/photos/2833366/pexels-photo-2833366.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/riot.jpg?raw=true">
     <div class="preview-text">
       <h4>Cities overrun by riots following invasion event</h4>
       <p>article preview article preview article preview article preview article preview
